--- a/assets/sass/utilities/variables/_colors.scss
+++ b/assets/sass/utilities/variables/_colors.scss
@@ -46,6 +46,7 @@ $siteTitle_linkColor: #333;
 // Footer Colors
 
 $siteFooter_backgroundColor: #fff;
+$siteFooter_borderColor: #eee;
 
 // Accessibility Colors
 
