--- a/assets/sass/utilities/variables/_typography.scss
+++ b/assets/sass/utilities/variables/_typography.scss
@@ -10,3 +10,7 @@ $archive_fontSize: 16;
 // Header
 $siteTitle_fontSize: 30;
 $siteDescription_fontSize: 16;
+
+// Footer
+$siteFooter_fontSize: 16;
+$footerWidget_fontSize: 18;
