--- a/assets/sass/components/footer/_footer-widget.scss
+++ b/assets/sass/components/footer/_footer-widget.scss
@@ -2,9 +2,8 @@
 --------------------------------------------- */
 
 .footer-widgets {
-	background-color: #fff;
-	font-size: 18px;
-	font-size: 1.8rem;
+	background-color: $siteFooter_backgroundColor;
+	font-size: rem( $footerWidget_fontSize );
 	clear: both;
 	padding: 60px 0;
 }
@@ -12,16 +11,32 @@
 .footer-widgets-1,
 .footer-widgets-2,
 .footer-widgets-3 {
-	width: 380px;
+	width: $footerWidgets_width;
+
+	@media only screen and (max-width: 1200px) {
+		width: 300px;
+	}
+
+	@media only screen and (max-width: 1023px) {
+		width: 100%;
+	}
 }
 
 .footer-widgets-1 {
 	margin-right: 70px;
+
+	@media only screen and (max-width: 1200px) {
+		margin-right: 30px;
+	}
 }
 
 .footer-widgets-1,
 .footer-widgets-2 {
 	float: left;
+
+	@media only screen and (max-width: 1023px) {
+		margin: 0 auto 40px;
+	}
 }
 
 .footer-widgets-3 {
