--- a/assets/sass/components/footer/_site-footer.scss
+++ b/assets/sass/components/footer/_site-footer.scss
@@ -2,15 +2,14 @@
 --------------------------------------------- */
 
 .site-footer {
-	background-color: #fff;
-	border-top: 1px solid #eee;
-	font-size: 16px;
-	font-size: 1.6rem;
+	background-color: $siteFooter_backgroundColor;
+	border-top: 1px solid $siteFooter_borderColor;
+	font-size: rem( $siteFooter_fontSize );
 	line-height: 1;
 	padding: 60px 0;
 	text-align: center;
-}
 
-.site-footer p {
-	margin-bottom: 0;
+	p {
+		margin-bottom: 0;
+	}
 }
