entry content sass refactoring

--- a/assets/sass/components/content/entry-footer/index.scss
+++ b/assets/sass/components/content/entry-footer/index.scss
@@ -1,7 +1,5 @@
-/* # Content Area
+/* # Entry Footer
 ---------------------------------------------------------------------------------------------------- */
 
 @import "base";
-@import "entry-header/index";
-@import "entry-content";
-@import "entry-footer/index";
+@import "entry-meta";
