--- a/assets/sass/utilities/variables/_colors.scss
+++ b/assets/sass/utilities/variables/_colors.scss
@@ -53,3 +53,14 @@ $siteFooter_borderColor: #eee;
 $menu_toggleBackgroundColor: #fff;
 $menu_toggleColor: #333;
 $menu_toggleBorderColor: #eee;
+
+// Entry Content
+
+$entryFooter_borderColor: #eee;
+$entryHover_color: #c3251d;
+$entryTitle_color: #333;
+$entryBackground_color: #fff;
+
+// Widget Colors
+
+$widgetTitle_color: #333;
