--- a/assets/sass/utilities/variables/_typography.scss
+++ b/assets/sass/utilities/variables/_typography.scss
@@ -14,3 +14,11 @@ $siteDescription_fontSize: 16;
 // Footer
 $siteFooter_fontSize: 16;
 $footerWidget_fontSize: 18;
+
+// Entry Content
+$headerEntry_meta: 16;
+$footerEntry_meta: 16;
+$entryTitle_fontSize: 36;
+
+// Widget Title 
+$widgetTitle_fontSize: 18;
