refactoring comment scss files

--- a/assets/sass/utilities/variables/_colors.scss
+++ b/assets/sass/utilities/variables/_colors.scss
@@ -2,16 +2,16 @@
 
 $base_color: #333;
 
-// Link Colors
+// Link 
 
 $link_color: #c3251d;
 $link_hoverColor: #333;
 
-// Body Colors
+// Body 
 
 $body_backgroundColor: #eee;
 
-// Navigation Colors
+// Navigation 
 
 $nav_linkColor: #333;
 $nav_hoverColor: #c3251d;
@@ -37,30 +37,34 @@ $pagination_backgroundColor: #fff;
 $pagination_hoverColor: #fff;;
 $pagination_hoverBackgroundColor: #c3251d;
 
-// Header Colors
+// Header 
 
 $siteHeader_backgroundColor: #fff;
 
 $siteTitle_linkColor: #333;
 
-// Footer Colors
+// Footer
 
 $siteFooter_backgroundColor: #fff;
 $siteFooter_borderColor: #eee;
 
-// Accessibility Colors
+// Accessibility
 
 $menu_toggleBackgroundColor: #fff;
 $menu_toggleColor: #333;
 $menu_toggleBorderColor: #eee;
 
-// Entry Content
+// Entry 
 
 $entryFooter_borderColor: #eee;
 $entryHover_color: #c3251d;
 $entryTitle_color: #333;
 $entryBackground_color: #fff;
 
-// Widget Colors
+// Widget 
 
 $widgetTitle_color: #333;
+
+// Comments
+
+$comment_backgroundColor: #fff;
