--- a/assets/sass/components/widgets/_widget-title.scss
+++ b/assets/sass/components/widgets/_widget-title.scss
@@ -1,12 +1,13 @@
 /* ## Widget Title
 --------------------------------------------- */
 
-.sidebar .widget-title a {
-    color: $widgetTitle_color;
-    text-decoration: none;
-}
-
-.widget-title {
-    font-size: rem( $widgetTitle_fontSize );
-    margin-bottom: 20px;
+.sidebar {
+    .widget-title {
+        font-size: rem( $widgetTitle_fontSize );
+        margin-bottom: 20px;
+        a {
+            color: $widgetTitle_color;
+            text-decoration: none;  
+        }
+    }
 }
