--- a/assets/sass/utilities/variables/_typography.scss
+++ b/assets/sass/utilities/variables/_typography.scss
@@ -22,6 +22,7 @@ $entryTitle_fontSize: 36;
 
 // Widget Title 
 $widgetTitle_fontSize: 18;
+$widgetTitle_featuredContent: 20;
 
 // Comments
 $entryComment_fontSize: 16;
