refactoring plugin scss

--- a/assets/sass/plugins/_enews-extended.scss
+++ b/assets/sass/plugins/_enews-extended.scss
@@ -1,37 +1,33 @@
 /* ## Genesis eNews Extended
 --------------------------------------------- */
 
-.sidebar .widget.enews-widget {
-    background-color: #333;
-}
-
 .sidebar .enews-widget {
+    background-color: $eNews_backgroundColor;
 
     &, .widget-title {
-        color: #fff;
+        color: $eNews_widgetTitle;
     }
 
     input,
     input:focus {
-        border: 1px solid #333;
+        border: 1px solid $eNews_borderColor;
     }
 
     input[type="submit"] {
-        background-color: #c3251d;
-        color: #fff;
+        background-color: $eNews_inputBackgroundColor;
+        color: $eNews_inputFontColor;
     }
 
     input:hover[type="submit"],
     input:focus[type="submit"]  {
-        background-color: #fff;
-        color: #333;
+        background-color: $eNews_inputHoverBackgroundColor;
+        color: $eNews_inputHoverFontColor;
     }
 }
 
 .enews-widget {
      input {
-        font-size: 16px;
-        font-size: 1.6rem;
+        font-size: rem( $eNews_fontSize );
         margin-bottom: 16px;
 
         &[type="submit"] {
