--- a/assets/sass/utilities/variables/_colors.scss
+++ b/assets/sass/utilities/variables/_colors.scss
@@ -68,3 +68,12 @@ $widgetTitle_color: #333;
 // Comments
 
 $comment_backgroundColor: #fff;
+
+// Plugins
+$eNews_backgroundColor: #333;
+$eNews_widgetTitle: #fff;
+$eNews_borderColor: #333;
+$eNews_inputBackgroundColor: #c3251d;
+$eNews_inputFontColor: #fff;
+$eNews_inputHoverBackgroundColor: #fff;
+$eNews_inputHoverFontColor: #333;
