structure and columns. refactoring.

--- a/assets/sass/layouts/column-widths-positions/_secondary-sidebar.scss
+++ b/assets/sass/layouts/column-widths-positions/_secondary-sidebar.scss
@@ -2,9 +2,10 @@
 
 .sidebar-secondary {
 	float: left;
-	width: 180px;
+	width: $secondarySidebar_width;
+
+	.content-sidebar-sidebar & {
+		float: right;
+	}	
 }
 
-.content-sidebar-sidebar .sidebar-secondary {
-	float: right;
-}
