--- a/assets/sass/layouts/column-widths-positions/index.scss
+++ b/assets/sass/layouts/column-widths-positions/index.scss
@@ -1,6 +1,7 @@
 /* ## Column Widths and Positions
 --------------------------------------------- */
 
+@import "base";
 @import "wrapping-div";
 @import "content";
 @import "primary-sidebar";
