--- a/assets/sass/layouts/_column-classes.scss
+++ b/assets/sass/layouts/_column-classes.scss
@@ -53,3 +53,21 @@
 	clear: both;
 	margin-left: 0;
 }
+
+@media only screen and (max-width: $smallScreen) {
+	
+	.five-sixths,
+	.four-sixths,
+	.one-fourth,
+	.one-half,
+	.one-sixth,
+	.one-third,
+	.three-fourths,
+	.three-sixths,
+	.two-fourths,
+	.two-sixths,
+	.two-thirds {
+		margin: 0px;
+		width: 100%;
+	}
+}
