--- a/assets/sass/layouts/_site-containers.scss
+++ b/assets/sass/layouts/_site-containers.scss
@@ -4,15 +4,38 @@
 .site-inner,
 .wrap {
 	margin: 0 auto;
-	max-width: 1280px;
+	max-width: $maxWidth;
+
+	@media only screen and (max-width: $largerScreen) {
+		max-width: $maxWidth_largerScreen;
+	}
+
+	@media only screen and (max-width: $largeScreen) {
+		max-width: $maxWidth_largeScreen;
+	}
+
+	@media only screen and (max-width: $mediumScreen) {
+		max-width: $maxWidth_mediumScreen;
+	}
 }
 
 .site-inner {
 	clear: both;
 	padding-top: 40px;
 	word-wrap: break-word;
+
+	@media only screen and (max-width: $smallScreen) {
+		padding: 5% 5% 0;
+	}
+}
+
+@media only screen and (max-width: $smallScreen) {
+	.wrap {
+		padding-left: 5%;
+		padding-right: 5%;
+	}
 }
 
 .landing-page .site-inner {
-	max-width: 800px;
+	max-width: $landingPage_maxWidth;
 }
