--- a/assets/sass/layouts/column-widths-positions/_content.scss
+++ b/assets/sass/layouts/column-widths-positions/_content.scss
@@ -2,21 +2,39 @@
 
 .content {
 	float: right;
-	width: 880px;
+	width: $content_width;
+
+	@media only screen and (max-width: $largerScreen) {
+		width: $content_widthLargerScreen;
+	}
+
+	@media only screen and (max-width: $largeScreen) {
+		width: $content_widthLargeScreen;
+	}
+
+	.content-sidebar-sidebar &,
+	.sidebar-content-sidebar &,
+	.sidebar-sidebar-content & {
+		width: $contentBoth_sidebarsWidth;
+	}
+
+	.content-sidebar &,
+	.content-sidebar-sidebar &,
+	.sidebar-content-sidebar & {
+		float: left;
+
+		@media only screen and (max-width: $largerScreen) {
+			width: $contentBoth_sidebarsWidthLargerScreen;
+		}
+
+		@media only screen and (max-width: $largeScreen) {
+			width: $contentBoth_sidebarsWidthLargeScreen;
+		}
+
+	}
+
+	.full-width-content & {
+		width: 100%;
+	}
 }
 
-.content-sidebar .content,
-.content-sidebar-sidebar .content,
-.sidebar-content-sidebar .content {
-	float: left;
-}
-
-.content-sidebar-sidebar .content,
-.sidebar-content-sidebar .content,
-.sidebar-sidebar-content .content {
-	width: 660px;
-}
-
-.full-width-content .content {
-	width: 100%;
-}
