--- a/assets/sass/layouts/column-widths-positions/_primary-sidebar.scss
+++ b/assets/sass/layouts/column-widths-positions/_primary-sidebar.scss
@@ -2,10 +2,14 @@
 
 .sidebar-primary {
 	float: right;
-	width: 360px;
-}
+	width: $primarySidebar_width;
 
-.sidebar-content .sidebar-primary,
-.sidebar-sidebar-content .sidebar-primary {
-	float: left;
+	@media only screen and (max-width: $largerScreen) {
+		width: $primarySidebar_widthLargerScreen;
+	}
+
+	.sidebar-content &,
+	.sidebar-sidebar-content & {
+		float: left;
+	}
 }
