--- a/assets/sass/utilities/variables/index.scss
+++ b/assets/sass/utilities/variables/index.scss
@@ -2,8 +2,8 @@
 // Variable Utilities (Helpers)
 //
 
-@import "base";
+// @import "base";
 @import "colors";
 @import "typography";
-@import "widths";
+@import "dimensions";
 @import "breakpoints";
