--- a/assets/sass/components/after-entry/index.scss
+++ b/assets/sass/components/after-entry/index.scss
@@ -1,6 +1,4 @@
-/* # Base Elements
+/* # After Entry
 ---------------------------------------------------------------------------------------------------- */
 
-@import "html5-reset/index";
-@import "elements/index";
-@import "common/index";
+@import "base";
