--- a/assets/sass/components/author-box/index.scss
+++ b/assets/sass/components/author-box/index.scss
@@ -1,8 +1,5 @@
-/* # Common Classes
+/* # Author Box
 ---------------------------------------------------------------------------------------------------- */
 
+@import "base";
 @import "avatar";
-@import "genesis";
-@import "titles";
-@import "wordpress";
-@import "buttons";
