--- a/assets/sass/components/index.scss
+++ b/assets/sass/components/index.scss
@@ -1,10 +1,16 @@
-//
-// Component Modules
-//
+/* # Components
+---------------------------------------------------------------------------------------------------- */
 
+@import "avatar";
+@import "buttons";
+@import "accessibility/index";
+@import "after-entry/index";
+@import "author-box/index";
+@import "breadcrumb";
 @import "comments/index";
-@import "entry/index";
+@import "content/index";
 @import "footer/index";
 @import "header/index";
 @import "navigation/index";
+@import "sidebars/index";
 @import "widgets/index";
