--- a/assets/sass/utilities/variables/_colors.scss
+++ b/assets/sass/utilities/variables/_colors.scss
@@ -10,6 +10,10 @@ $link_hoverColor: #333;
 // Body 
 
 $body_backgroundColor: #eee;
+$body_fontColor: #333;
+
+// HR
+$hr_borderColor: #eee;
 
 // Navigation 
 
@@ -77,3 +81,38 @@ $eNews_inputBackgroundColor: #c3251d;
 $eNews_inputFontColor: #fff;
 $eNews_inputHoverBackgroundColor: #fff;
 $eNews_inputHoverFontColor: #333;
+
+// Breadcrumbs
+$breadCrumb_backgroundColor: #fff;
+
+// Author Box
+$authorBox_backgroundColor: #fff;
+
+// After Entry
+$afterEntry_backgroundColor: #fff;
+
+// Archive Description
+$archiveDescription_backgroundColor: #fff;
+
+// Search Input
+$searchInput_backgroundColor: #fff;
+$searchInput_fontColor: #333;
+
+// Forms
+$input_backgroundColor: #fff;
+$input_borderColor: #ddd;
+$input_color: #333;
+$input_focusBorderColor: #999;
+$placeholder_color: #333;
+
+// Buttons
+$button_backgroundColor: #333;
+$button_focusBackgroundColor: #c3251d;
+$button_textColor: #fff;
+$button_hoverTextColor: #fff;
+$button_disabledBackgroundColor: #eee;
+$button_disabledTextColor: #777;
+
+// Gallery
+$galleryImg_borderColor: #eee;
+$galleryImg_hoverBorderColor: #999;
