--- a/assets/sass/base/common/index.scss
+++ b/assets/sass/base/common/index.scss
@@ -1,6 +1,5 @@
-/* # Base Elements
+/* # Common
 ---------------------------------------------------------------------------------------------------- */
 
-@import "html5-reset/index";
-@import "elements/index";
-@import "common/index";
+@import "alignments";
+@import "audio-video";
