--- a/assets/sass/base/elements/_blockquote.scss
+++ b/assets/sass/base/elements/_blockquote.scss
@@ -3,15 +3,15 @@
 
 blockquote {
 	margin: 40px;
+
+	&::before {
+		content: "\201C";
+		display: block;
+		font-size: rem( $blockQuote_fontSize );
+		height: 0;
+		left: -20px;
+		position: relative;
+		top: -10px;
+	}
 }
 
-blockquote::before {
-	content: "\201C";
-	display: block;
-	font-size: 30px;
-	font-size: 3rem;
-	height: 0;
-	left: -20px;
-	position: relative;
-	top: -10px;
-}
