--- a/assets/sass/base/elements/_forms.scss
+++ b/assets/sass/base/elements/_forms.scss
@@ -4,11 +4,10 @@
 input,
 select,
 textarea {
-	background-color: #fff;
-	border: 1px solid #ddd;
-	color: #333;
-	font-size: 18px;
-	font-size: 1.8rem;
+	background-color: $input_backgroundColor;
+	border: 1px solid $input_borderColor;
+	color: $input_color;
+	font-size: rem( $input_fontSize );
 	font-weight: 400;
 	padding: 16px;
 	width: 100%;
@@ -16,7 +15,7 @@ textarea {
 
 input:focus,
 textarea:focus {
-	border: 1px solid #999;
+	border: 1px solid $input_focusBorderColor;
 	outline: none;
 }
 
@@ -27,12 +26,12 @@ input[type="radio"] {
 }
 
 ::-moz-placeholder {
-	color: #333;
+	color: $placeholder_color;
 	opacity: 1;
 }
 
 ::-webkit-input-placeholder {
-	color: #333;
+	color: $placeholder_color;
 }
 
 button,
@@ -40,12 +39,11 @@ input[type="button"],
 input[type="reset"],
 input[type="submit"],
 .button {
-	background-color: #333;
+	background-color: $button_backgroundColor;
 	border: 0;
-	color: #fff;
+	color: $button_textColor;
 	cursor: pointer;
-	font-size: 16px;
-	font-size: 1.6rem;
+	font-size: rem( $button_fontSize );
 	font-weight: 700;
 	padding: 16px 24px;
 	text-decoration: none;
@@ -63,13 +61,13 @@ input:focus[type="button"],
 input:focus[type="reset"],
 input:focus[type="submit"],
 .button:focus  {
-	background-color: #c3251d;
-	color: #fff;
+	background-color: $button_focusBackgroundColor;
+	color: $button_textColor;
 }
 
 .entry-content .button:hover,
 .entry-content .button:focus {
-	color: #fff;
+	color: $button_hoverTextColor;
 }
 
 .button {
@@ -84,20 +82,23 @@ input[type="submit"].small {
 	padding: 8px 16px;
 }
 
-.site-container button:disabled,
-.site-container button:disabled:hover,
-.site-container input:disabled,
-.site-container input:disabled:hover,
-.site-container input[type="button"]:disabled,
-.site-container input[type="button"]:disabled:hover,
-.site-container input[type="reset"]:disabled,
-.site-container input[type="reset"]:disabled:hover,
-.site-container input[type="submit"]:disabled,
-.site-container input[type="submit"]:disabled:hover {
-	background-color: #eee;
-	border-width: 0;
-	color: #777;
-	cursor: not-allowed;
+.site-container {
+	
+	button:disabled,
+	button:disabled:hover,
+	input:disabled,
+	input:disabled:hover,
+	input[type="button"]:disabled,
+	input[type="button"]:disabled:hover,
+	input[type="reset"]:disabled,
+	input[type="reset"]:disabled:hover,
+	input[type="submit"]:disabled,
+	input[type="submit"]:disabled:hover {
+		background-color: $button_disabledBackgroundColor;
+		border-width: 0;
+		color: $button_disabledTextColor;
+		cursor: not-allowed;
+	}
 }
 
 input[type="search"]::-webkit-search-cancel-button,
