--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -24,3 +24,4 @@ Text Domain: ballast
 @import "components/comments/index";
 @import "components/sidebars/index";
 @import "components/footer/index";
+@import "views/index";
