--- a/assets/sass/views/index.scss
+++ b/assets/sass/views/index.scss
@@ -1,6 +1,4 @@
-/* # Base Elements
+/* # Views
 ---------------------------------------------------------------------------------------------------- */
 
-@import "html5-reset/index";
-@import "elements/index";
-@import "common/index";
+@import "archive";
