final restructure before gulp

--- a/assets/sass/base/html5-reset/index.scss
+++ b/assets/sass/base/html5-reset/index.scss
@@ -1,5 +1,5 @@
 /* # HTML5 Reset
 ---------------------------------------------------------------------------------------------------- */
-@import "normalize.scss";
+@import "normalize";
 @import "box-sizing";
 @import "float-clearing";
