--- a/assets/sass/components/content/entry-header/index.scss
+++ b/assets/sass/components/content/entry-header/index.scss
@@ -1,7 +1,7 @@
 /* # Entry Header
 ---------------------------------------------------------------------------------------------------- */
 
-@import "base.scss";
+// @import "base.scss";
 @import "entry-title";
 @import "entry-meta";
-@import "featured-image";
+// @import "featured-image";
