--- a/assets/sass/components/header/_header-right.scss
+++ b/assets/sass/components/header/_header-right.scss
@@ -6,11 +6,11 @@
 	text-align: right;
 	width: $headerRight_width;
 
-	@media screen and (max-width: 1200px) {
+	@media screen and (max-width: $largeScreen) {
 		width: 620px;
 	}
 
-	@media screen and (max-width: 1200px) {
+	@media screen and (max-width: $mediumScreen) {
 		width: 100%;
 	}
 }
