--- a/assets/sass/components/navigation/_pagination.scss
+++ b/assets/sass/components/navigation/_pagination.scss
@@ -5,7 +5,7 @@
 	clear: both;
 	margin: 40px 0;
 
-	@media only screen and (max-width: 860px) {
+	@media only screen and (max-width: $smallScreen) {
 		margin: 5% auto;
 	}
 }
@@ -19,7 +19,7 @@
 	li {
 		display: inline;
 
-		@media only screen and (max-width: 860px) {
+		@media only screen and (max-width: $smallScree) {
 			
 			a {
 				margin-bottom: 4px;
