--- a/assets/sass/components/navigation/index.scss
+++ b/assets/sass/components/navigation/index.scss
@@ -2,9 +2,10 @@
 ---------------------------------------------------------------------------------------------------- */
 @import "base";
 @import "accessible-menu";
-@import "breadcrumbs";
 @import "site-header";
+@import "secondary";
 @import "primary";
 @import "pagination";
 @import "footer-navigation";
+@import "breadcrumb";
 @import "js-enabled";
