--- a/assets/sass/utilities/variables/_colors.scss
+++ b/assets/sass/utilities/variables/_colors.scss
@@ -116,3 +116,6 @@ $button_disabledTextColor: #777;
 // Gallery
 $galleryImg_borderColor: #eee;
 $galleryImg_hoverBorderColor: #999;
+
+// Sidebar
+$sidebar_backgroundColor: #fff;
