--- a/assets/sass/components/content/entry-footer/index.scss
+++ b/assets/sass/components/content/entry-footer/index.scss
@@ -1,5 +1,5 @@
 /* # Entry Footer
 ---------------------------------------------------------------------------------------------------- */
 
-@import "base";
+// @import "base";
 @import "entry-meta";
