--- a/assets/sass/components/header/_header-image.scss
+++ b/assets/sass/components/header/_header-image.scss
@@ -8,7 +8,7 @@
 		max-width: $titleArea_width;
 		padding: 0;
 
-		@media only screen and (max-width: 1023px) {
+		@media only screen and (max-width: $mediumScreen) {
 			float: none;
 		}
 	}
