--- a/assets/sass/components/header/_title-area.scss
+++ b/assets/sass/components/header/_title-area.scss
@@ -6,7 +6,7 @@
 	padding: 10px 0;
 	width: $titleArea_width;
 
-	@media only screen and (max-width: 1023px) {
+	@media only screen and (max-width: $mediumScreen) {
 		width: 100%;
 
 		.site-header & {
