--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -2,7 +2,8 @@
 Theme Name: Ballast
 Author: Trevor Caudill
 Author URI: https://trevorcaudill.com/
-Description: Genesis child theme. Incorporates SASS, Gulp, and a modern file structure.
+Description: Genesis child theme.
+
 Version: 1.0.0
 
 Template: Genesis
@@ -12,16 +13,9 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: ballast
 */
 
+@import "utilities/index";
 @import "base/index";
 @import "layouts/index";
-@import "common-classes/index";
-@import "components/widgets/index";
+@import "components/index";
 @import "plugins/index";
-@import "components/accessibility/index";
-@import "components/header/index";
-@import "components/navigation/index";
-@import "components/content/index";
-@import "components/comments/index";
-@import "components/sidebars/index";
-@import "components/footer/index";
 @import "views/index";
