--- a/assets/sass/components/content/entry-footer/_entry-meta.scss
+++ b/assets/sass/components/content/entry-footer/_entry-meta.scss
@@ -3,7 +3,7 @@
 
 .entry-footer .entry-meta {
     border-top: 1px solid $entryFooter_borderColor;
-    font-size: rem( $footerEntry_meta );
+    @include rem( font-size, $footerEntry_meta );
     padding-top: 24px;
     margin-bottom: 0px;
 }
