--- a/assets/sass/components/footer/_footer-widget.scss
+++ b/assets/sass/components/footer/_footer-widget.scss
@@ -3,7 +3,7 @@
 
 .footer-widgets {
 	background-color: $siteFooter_backgroundColor;
-	font-size: rem( $footerWidget_fontSize );
+	@include rem( font-size, $footerWidget_fontSize );
 	clear: both;
 	padding: 60px 0;
 }
