--- a/assets/sass/components/navigation/_breadcrumb.scss
+++ b/assets/sass/components/navigation/_breadcrumb.scss
@@ -3,7 +3,7 @@
 
 .breadcrumb {
 	background-color: $breadCrumb_backgroundColor;
-	font-size: rem( $breadCrumb_fontSize );
+	@include rem( font-size, $breadCrumb_fontSize );
 	margin-bottom: 1px;
 	padding: 12px 30px;
 }
