--- a/assets/sass/base/elements/_blockquote.scss
+++ b/assets/sass/base/elements/_blockquote.scss
@@ -7,7 +7,7 @@ blockquote {
 	&::before {
 		content: "\201C";
 		display: block;
-		font-size: rem( $blockQuote_fontSize );
+		@include rem( font-size, $blockQuote_fontSize );
 		height: 0;
 		left: -20px;
 		position: relative;
