--- a/assets/sass/base/elements/_defaults.scss
+++ b/assets/sass/base/elements/_defaults.scss
@@ -10,21 +10,21 @@ body {
 	background-color: $body_backgroundColor;
 	color: $body_fontColor;
 	font-family: $baseFontFamily;
-	font-size: rem( $base_fontSize );
+	@include rem( font-size, $base_fontSize );
 	-webkit-font-smoothing: antialiased;
 	font-weight: 400;
 	line-height: 1.625;
 	margin: 0;
 
 	@media only screen and (max-width: $smallScreen) {
-		font-size: rem( $base_fontSize_smallScreen );
+		@include rem( font-size, $base_fontSize_smallScreen );
 	}
 
 	> div {
-		font-size: $base_fontSize;
+		@include rem( font-size, $base_fontSize );
 
 		@media only screen and (max-width: $smallScreen) {
-			font-size: rem( $base_fontSize_smallScreen );
+			@include rem( font-size, $base_fontSize_smallScreen );
 		}
 	}
 }
