--- a/assets/sass/components/author-box/_base.scss
+++ b/assets/sass/components/author-box/_base.scss
@@ -3,7 +3,7 @@
 
 .author-box {
     background-color: $authorBox_backgroundColor;
-	font-size: rem( $authorBox_fontSize );
+	@include rem( font-size, $authorBox_fontSize );
 	margin-bottom: 40px;
     padding: 60px;
     
@@ -18,5 +18,5 @@
 }
 
 .author-box-title {
-    font-size: rem( $authorBox_title );
+    @include rem( font-size, $authorBox_title );
 }
