--- a/assets/sass/components/footer/_site-footer.scss
+++ b/assets/sass/components/footer/_site-footer.scss
@@ -4,7 +4,7 @@
 .site-footer {
 	background-color: $siteFooter_backgroundColor;
 	border-top: 1px solid $siteFooter_borderColor;
-	font-size: rem( $siteFooter_fontSize );
+	@include rem( font-size, $siteFooter_fontSize );
 	line-height: 1;
 	padding: 60px 0;
 	text-align: center;
