--- a/assets/sass/components/navigation/_base.scss
+++ b/assets/sass/components/navigation/_base.scss
@@ -3,7 +3,7 @@
 
 .genesis-nav-menu {
 	clear: both;
-	font-size: rem( $nav_fontSize );
+	@include rem( font-size, $nav_fontSize );
 	font-weight: 600;
 	line-height: 1;
 	width: 100%;
@@ -12,7 +12,7 @@
 		text-align: center;
 
 		li,
-		.site-header ul& {
+		.site-header ul & {
 			float: none;
 		}
 	}
@@ -57,7 +57,7 @@
 			background-color: $subMenu_linkBackgroundColor;
 			border: 1px solid $subMenu_linkBorderColor;
 			border-top: 0;
-			font-size: rem( $subMenu_linkFontSize );
+			@include rem( font-size, $subMenu_linkFontSize );
 			padding: 20px;
 			position: relative;
 			width: 200px;
