--- a/assets/sass/components/widgets/_featured-content.scss
+++ b/assets/sass/components/widgets/_featured-content.scss
@@ -12,6 +12,6 @@
     }
 
     .entry-title {
-        font-size: rem( $widgetTitle_featuredContent );
+        @include rem( font-size, $widgetTitle_featuredContent );
     }
 }
