--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -13,6 +13,10 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: ballast
 */
 
+@import "bourbon";
+@import "neat";
+@import "../../node_modules/sass-rem/rem";
+
 @import "utilities/index";
 @import "base/index";
 @import "layouts/index";
