--- a/assets/sass/views/_archive.scss
+++ b/assets/sass/views/_archive.scss
@@ -12,7 +12,7 @@
     }
     
     .entry-title {
-        font-size: rem( $archiveDescription_title );
+        @include rem( font-size, $archiveDescription_title );
 	}
 	
 	@media only screen and (max-width: $smallScreen) {
@@ -22,5 +22,5 @@
 }
 
 .archive-title {
-    font-size: rem( $archive_title );
+    @include rem( font-size, $archive_title );
 }
