Fixing mobile styles and refactoring.

--- a/assets/sass/layouts/column-widths-positions/_base.scss
+++ b/assets/sass/layouts/column-widths-positions/_base.scss
@@ -1,16 +1,2 @@
-/* ## Genesis eNews Extended
+/* ## Base Layout
 --------------------------------------------- */
-@media only screen and (max-width: $mediumScreen) {
-
-    .content,
-    .content-sidebar-sidebar .content,
-    .content-sidebar-sidebar .content-sidebar-wrap,
-    .sidebar-content-sidebar .content,
-    .sidebar-content-sidebar .content-sidebar-wrap,
-    .sidebar-primary,
-    .sidebar-secondary,
-    .sidebar-sidebar-content .content,
-    .sidebar-sidebar-content .content-sidebar-wrap {
-        width: 100%;
-    }
-}
