--- a/assets/sass/components/sidebars/_base.scss
+++ b/assets/sass/components/sidebars/_base.scss
@@ -9,3 +9,14 @@
 	background-color: $sidebar_backgroundColor;
 	padding: 40px;
 }
+
+@media only screen and (max-width: $mediumScreen) {
+
+    .content-sidebar-sidebar .content-sidebar-wrap,
+    .sidebar-content-sidebar .content-sidebar-wrap,
+    .sidebar-primary,
+    .sidebar-secondary,
+    .sidebar-sidebar-content .content-sidebar-wrap {
+        width: 100% !important;
+    }
+}
