Fixing Mobile Navigation

--- a/assets/sass/components/navigation/_primary.scss
+++ b/assets/sass/components/navigation/_primary.scss
@@ -4,4 +4,8 @@
 .nav-primary {
 	background-color: $primaryNav_backgroundColor;
 	border-top: 1px solid $primaryNav_borderColor;
+
+	@media only screen and (max-width: $mediumScreen) {
+		display: none;
+	}
 }
