--- a/assets/sass/components/sidebars/_base.scss
+++ b/assets/sass/components/sidebars/_base.scss
@@ -17,6 +17,6 @@
     .sidebar-primary,
     .sidebar-secondary,
     .sidebar-sidebar-content .content-sidebar-wrap {
-        width: 100% !important;
+        width: 100%;
     }
 }
