Menu tag added after

--- a/assets/sass/components/navigation/_accessible-menu.scss
+++ b/assets/sass/components/navigation/_accessible-menu.scss
@@ -71,6 +71,14 @@
 			@include transform( translate(0, 0) );
 		}
 
+		&:after,
+		&.activated:after {
+			content: "Menu";
+			font-style: normal;
+			position: relative;
+			top: -1px;
+		}
+
 		.site-header & {
 			border: 0;
 		}
