--- a/assets/sass/base/elements/_defaults.scss
+++ b/assets/sass/base/elements/_defaults.scss
@@ -38,7 +38,7 @@ input[type="submit"],
 textarea:focus,
 .button,
 .gallery img {
-	@include transition( all 0.1s ease-in-out );
+	transition: all 0.1s ease-in-out;
 }
 
 a {
