--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -4,7 +4,7 @@ Author: Trevor Caudill
 Author URI: https://trevorcaudill.com/
 Description: Genesis child theme.
 
-Version: 1.0.0
+Version: 1.0.2
 
 Template: Genesis
 
@@ -13,13 +13,13 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: ballast
 */
 
-@import "bourbon";
-@import "neat";
-@import "../../node_modules/sass-rem/rem";
+@import 'bourbon';
+@import 'neat';
+@import '../../node_modules/sass-rem/rem';
 
-@import "utilities/index";
-@import "base/index";
-@import "layouts/index";
-@import "components/index";
-@import "plugins/index";
-@import "views/index";
+@import 'utilities/index';
+@import 'base/index';
+@import 'layouts/index';
+@import 'components/index';
+@import 'plugins/index';
+@import 'views/index';
