Added animate library and started front page template one

--- a/assets/sass/views/front-page/index.scss
+++ b/assets/sass/views/front-page/index.scss
@@ -1,6 +1,4 @@
-/* # Variables Index
+/* # Front Page Templates
 ---------------------------------------------------------------------------------------------------- */
 
-
-@import "variables/index";
-@import "animate/index";
+@import "front-page-one";
