--- a/assets/sass/utilities/animate/index.scss
+++ b/assets/sass/utilities/animate/index.scss
@@ -1,6 +1,4 @@
-/* # Variables Index
+/* # Animate Library
 ---------------------------------------------------------------------------------------------------- */
 
-
-@import "variables/index";
-@import "animate/index";
+@import "animate";
