--- a/assets/sass/views/index.scss
+++ b/assets/sass/views/index.scss
@@ -1,4 +1,5 @@
 /* # Views
 ---------------------------------------------------------------------------------------------------- */
 
+@import "front-page/index";
 @import "archive";
