Starting first page template styles

--- a/assets/sass/views/front-page/_front-page-one.scss
+++ b/assets/sass/views/front-page/_front-page-one.scss
@@ -1,2 +1,13 @@
 /* ## Front Page One - Main Hero w/ Call to Action
 --------------------------------------------- */
+
+.ballast-front-page {
+
+    .hero-container-one {
+
+        .site-inner-one {
+
+            text-align: center;
+        }
+    }
+}
