--- a/assets/sass/utilities/variables/index.scss
+++ b/assets/sass/utilities/variables/index.scss
@@ -1,8 +1,7 @@
-//
-// Variable Utilities (Helpers)
-//
+/* Variables
+---------------------------------------------------------------------------------------------------- */
 
-// @import "base";
+@import "base";
 @import "colors";
 @import "typography";
 @import "dimensions";
