--- a/assets/sass/components/widgets/_base.scss
+++ b/assets/sass/components/widgets/_base.scss
@@ -36,7 +36,7 @@
 
 @media only screen and (max-width: $smallScreen) {
 	.sidebar .widget {
-		padding: 30px;
+	/*	padding: 30px; */
 		margin-bottom: 5%;
 	}
 }
