--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -6,7 +6,7 @@ Description: Genesis child theme.
 
 Version: 1.1.0
 
-Template: Genesis
+Template: genesis
 
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
