--- a/assets/sass/utilities/variables/_colors.scss
+++ b/assets/sass/utilities/variables/_colors.scss
@@ -4,12 +4,12 @@ $base_color: #333;
 
 // Link 
 
-$link_color: #c3251d;
+$link_color: #0073e5;
 $link_hoverColor: #333;
 
 // Body 
 
-$body_backgroundColor: #eee;
+$body_backgroundColor: #fff;
 $body_fontColor: #333;
 
 // HR
@@ -18,7 +18,7 @@ $hr_borderColor: #eee;
 // Navigation 
 
 $nav_linkColor: #333;
-$nav_hoverColor: #c3251d;
+$nav_hoverColor: #0073e5;
 
 $subMenu_linkBackgroundColor: #fff;
 $subMenu_borderColor: #eee;
@@ -33,13 +33,13 @@ $secondaryNav_linkColor: $nav_linkColor;
 
 $jsNav_backgroundColor: #fff;
 $jsNav_hoverColor: #000;
-$jsNav_focusColor: #c3251d;
+$jsNav_focusColor: #0073e5;
 
 $archivePagination_color: #333;
 $archivePagination_backgroundColor: #fff;
 $pagination_backgroundColor: #fff;
 $pagination_hoverColor: #fff;;
-$pagination_hoverBackgroundColor: #c3251d;
+$pagination_hoverBackgroundColor: #0073e5;
 
 // Header 
 
@@ -61,7 +61,7 @@ $menu_toggleBorderColor: #eee;
 // Entry 
 
 $entryFooter_borderColor: #eee;
-$entryHover_color: #c3251d;
+$entryHover_color: #0073e5;
 $entryTitle_color: #333;
 $entryBackground_color: #fff;
 
@@ -77,7 +77,7 @@ $comment_backgroundColor: #fff;
 $eNews_backgroundColor: #333;
 $eNews_widgetTitle: #fff;
 $eNews_borderColor: #333;
-$eNews_inputBackgroundColor: #c3251d;
+$eNews_inputBackgroundColor: #0073e5;
 $eNews_inputFontColor: #fff;
 $eNews_inputHoverBackgroundColor: #fff;
 $eNews_inputHoverFontColor: #333;
@@ -107,7 +107,7 @@ $placeholder_color: #333;
 
 // Buttons
 $button_backgroundColor: #333;
-$button_focusBackgroundColor: #c3251d;
+$button_focusBackgroundColor: #0073e5;
 $button_textColor: #fff;
 $button_hoverTextColor: #fff;
 $button_disabledBackgroundColor: #eee;
