--- a/assets/sass/components/content/_base.scss
+++ b/assets/sass/components/content/_base.scss
@@ -4,10 +4,10 @@
 .entry {
     background-color: $entryBackground_color;
     margin-bottom: 40px;
-    padding: 70px 80px;
+    /* padding: 70px 80px; */
 
     @media only screen and (max-width: $smallScreen) {
-		padding: 30px;
+	  /*	padding: 30px; */
 		margin-bottom: 5%;
     }
 }
