--- a/assets/sass/components/header/_base.scss
+++ b/assets/sass/components/header/_base.scss
@@ -3,8 +3,8 @@
 .site-header {
 	background-color: $siteHeader_backgroundColor;
     > .wrap {
-        padding: 20px 0;
-    }
+       /* padding: 20px 0; */
+    } 
 
     @media only screen and (max-width: $mediumScreen) {
         .wrap {
