--- a/assets/sass/components/navigation/_primary.scss
+++ b/assets/sass/components/navigation/_primary.scss
@@ -3,9 +3,11 @@
 
 .nav-primary {
 	background-color: $primaryNav_backgroundColor;
-	border-top: 1px solid $primaryNav_borderColor;
+	/* border-top: 1px solid $primaryNav_borderColor; */
 
 	@media only screen and (max-width: $mediumScreen) {
 		display: none;
+		flex: 1 1 100%;
+		order: 3;
 	}
 }
