--- a/assets/sass/views/_archive.scss
+++ b/assets/sass/views/_archive.scss
@@ -5,7 +5,7 @@
 	background-color: $archiveDescription_backgroundColor;
 	font-size: $archiveDescription_fontSize;
 	margin-bottom: 40px;
-	padding: 60px;
+	/* padding: 60px; */
 
 	p:last-child {
 		margin-bottom: 0;
@@ -16,7 +16,7 @@
 	}
 	
 	@media only screen and (max-width: $smallScreen) {
-		padding: 30px;
+		/* padding: 30px; */
 		margin-bottom: 5%;
 	}
 }
