--- a/assets/sass/components/header/_site-title.scss
+++ b/assets/sass/components/header/_site-title.scss
@@ -5,6 +5,11 @@
 	font-weight: 500;
 	line-height: 1.2;
 	padding-top: 10px;
+	text-align: left;
+
+	@media only screen and (max-width: $smallerScreen) {
+		text-align: center;
+	}
 
 	a,
 	a:hover,
