--- a/assets/sass/views/front-page/_front-page-one.scss
+++ b/assets/sass/views/front-page/_front-page-one.scss
@@ -7,6 +7,10 @@
         padding-top: 0px;
     }
 
+    h2 {
+        @include rem( font-size, 40px );
+    }
+
     .hero-container-one {
         height: 500px;
         margin-top: 2px;
